--- a/src/components/header/style/index.scss
+++ b/src/components/header/style/index.scss
@@ -1,7 +1,6 @@
-.header {
+.myHeader {
   width: 100%;
   height: 127px;
-  top: 0;
   background: rgba(108, 207, 83, 0.8);
 }
 
@@ -73,7 +72,7 @@ i.shopping.cart.big.icon.cartIcon {
     width: 90%;
   }
 
-  .header {
+  .myHeader {
     height: 180px;
   }
 }
@@ -93,7 +92,7 @@ i.shopping.cart.big.icon.cartIcon {
     width: 90%;
   }
 
-  .header {
+  .myHeader {
     height: 220px;
   }
 
