Add response message where necessary

--- a/src/components/header/style/index.scss
+++ b/src/components/header/style/index.scss
@@ -7,10 +7,11 @@
 .logo {
   position: absolute;
   left: 10px;
-  width: 250px;
   height: 75px;
-  margin-top: 25px;
-  background-color: black;
+  padding-top: 55px;
+  display: block;
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .headerActions {
